--- a/SubscriptionSpecialsPDF.html
+++ b/SubscriptionSpecialsPDF.html
@@ -154,7 +154,7 @@ style="padding-right:0px;padding-left:0px;padding-top:0;padding-bottom:0"
                                                           valign="top">
                                                           <a
                                                           href="http://pressa.yurincom.com"><img
-src="F:/Docs/mediayi/Dropbox/htmlрассылка/pic1.jpg"
+src="F:/xampp/htdocs/gh/htmlMailing/pic1.jpg"
                                                           alt=""
                                                           height="158"
                                                           border="0"
@@ -266,7 +266,7 @@ style="font-size:15px"><span style="font-family:trebuchet ms,lucida
                                                           grande,lucida
                                                           sans
                                                           unicode,lucida
-sans,tahoma,sans-serif">Наступила осень — издательство </span></span><span
+sans,tahoma,sans-serif">Наступила осень и издательство </span></span><span
 style="font-size:15px"><span style="font-family:trebuchet ms,lucida
                                                           grande,lucida
                                                           sans
@@ -447,7 +447,7 @@ href="http://pressa.yurincom.com/"
                                                           title=""
                                                           style="word-wrap:break-word"
 target="_blank"> <img
-src="F:/Docs/mediayi/Dropbox/htmlрассылка/pic5.jpg"
+src="F:/xampp/htdocs/gh/htmlMailing/pic5.jpg"
                                                           alt=""> </a>
                                                           </td>
                                                         </tr>
@@ -797,7 +797,7 @@ style="border-collapse:collapse;background-color:#ffffff;border-top:0;border-bot
                                                           <td
                                                           style="padding:9px"
                                                           valign="top"><img
-src="F:/Docs/mediayi/Dropbox/htmlрассылка/piclogo.jpg"
+src="F:/xampp/htdocs/gh/htmlMailing/piclogo.jpg"
                                                           alt=""
                                                           height="79"
                                                           width="256"></td>
