--- a/SubscriptionSpecialsPDF.html
+++ b/SubscriptionSpecialsPDF.html
@@ -404,7 +404,7 @@ sans,tahoma,sans-serif"></span></span>&nbsp;</b> на три месяца и
                                                           получите еще
                                                           три месяца в
                                                           подарок! Подпишитесь на два месяца и получите
-                                                          еще два месяца в подарок! </span></span></span></span><span
+                                                          еще два месяца в подарок! Подпишитесь на один месяц и получите еще месяц в подарок!  </span></span></span></span><span
 style="font-size:15px"><span style="font-family:trebuchet ms,lucida
                                                           grande,lucida
                                                           sans
@@ -541,56 +541,57 @@ sans,tahoma,sans-serif"></span></span></li>
 
 
 
-<span style="font-size:15px">Например, стоимость
-                                                          подписки на
-                                                          полгода на
-                                                          електронную версию
-                                                          журнала "Вісник
-                                                          Вищого
-                                                          адміністративного
-                                                          суду України"
+<span style="font-size:15px">Например, подписавшись на три месяца на електронную версию журнала "Вісник Вищого адміністративного суду України"   
+
                                                           </span></span>
                                                           <span
                                                           style="font-family:calibri,sans-serif;font-size:11.0pt;line-height:107%">–</span>
                                                           <span
                                                           style="font-size:20px"><span
-style="color:#00cccc">всего </span></span><span style="font-size:29px"><span
-style="color:#00cccc">42 грн.</span></span><span style="font-size:22px"><span
-style="color:#00cccc"><b> </b></span></span> <span
+style="color:#00cccc">всего за</span></span><span style="font-size:29px"><span
+style="color:#00cccc"> 42 грн.</span></span><span style="font-size:22px"><span
+style="color:#00cccc"><b> </b></span></span>
+– Вы будете получать издания за полгода (без акции это стоило бы
+
+
+ <span
                                                           style="font-size:18px"><span
-style="color:#10813a"><b style="color:red">вместо 84 грн</b>
+style="color:#10813a"><b style="color:red"> 84 грн.</b>
 
 
 
 
 
-<b
-                                                          style="color:red">.</b></span></span><br>
+</span></span>
 
 
-<span style="font-size:17px">А, например, стоимость
-                                                          подписки на
-                                                          полгода на
-                                                          електронную версию
-                                                          журнала "Бюлетень законодавства і юридичної
-                                                          практики України"
+<span style="font-size:15px">). Т.е. Вы секономите 42 грн.!<br>
+
+
+ А подписавшись на три месяца на електронную версию журнала "Бюлетень законодавства і юридичної практики України"  
+
+
                                                           </span></span>
                                                           <span
                                                           style="font-family:calibri,sans-serif;font-size:11.0pt;line-height:107%">–</span>
                                                           <span
                                                           style="font-size:20px"><span
-style="color:#00cccc">всего </span></span><span style="font-size:29px"><span
-style="color:#00cccc">165,42 грн.</span></span><span style="font-size:22px"><span
+style="color:#00cccc">всего за</span></span><span style="font-size:29px"><span
+style="color:#00cccc"> 165,42 грн.</span></span>
+
+– Вы будете получать издание за полгода (а без акции это стоит
+
+<span style="font-size:22px"><span
 style="color:#00cccc"><b> </b></span></span> <span
                                                           style="font-size:18px"><span
-style="color:#10813a"><b style="color:red">вместо 330,84 грн</b>
+style="color:#10813a"><b style="color:red">330,84 грн.</b>
 
 
-
+</span></span> ). Т.е. Вы секономите 165,42 грн.!
 
 
 <b
-                                                          style="color:red">.</b></span></span><br>
+                                                          style="color:red"> </b></span></span><br>
 
 
 
