--- a/SubscriptionSpecialsPDF.html
+++ b/SubscriptionSpecialsPDF.html
@@ -566,9 +566,9 @@ style="color:#10813a"><b style="color:red"> 84 грн.</b>
 
 
 <span style="font-size:15px">). Т.е. Вы секономите 42 грн.!<br>
+<br>
 
-
- А подписавшись на три месяца на електронную версию журнала "Бюлетень законодавства і юридичної практики України"  
+Подписавшись на три месяца на електронную версию журнала "Бюлетень законодавства і юридичної практики України"  
 
 
                                                           </span></span>
@@ -577,17 +577,20 @@ style="color:#10813a"><b style="color:red"> 84 грн.</b>
                                                           <span
                                                           style="font-size:20px"><span
 style="color:#00cccc">всего за</span></span><span style="font-size:29px"><span
-style="color:#00cccc"> 165,42 грн.</span></span>
+style="color:#00cccc"> 165,42&nbsp;грн.</span></span>
 
 – Вы будете получать издание за полгода (а без акции это стоит
 
 <span style="font-size:22px"><span
 style="color:#00cccc"><b> </b></span></span> <span
                                                           style="font-size:18px"><span
-style="color:#10813a"><b style="color:red">330,84 грн.</b>
+style="color:#10813a"><b style="color:red">330,84&nbsp;грн.</b>
 
 
-</span></span> ). Т.е. Вы секономите 165,42 грн.!
+</span></span> ). Т.е. Вы секономите 165,42&nbsp;грн.! <br>
+<br>
+У нас много юридических журналов, а также газета "Юридичний вісник України". Вы сможете подписаться на любой из них на печатный или електронный вариант. Всех их Вы увидите на нашем сайте http://pressa.yurincom.com/ 
+Выбирайте на ваш вкус!<br>
 
 
 <b
