--- a/SubscriptionSpecialsPDF.html
+++ b/SubscriptionSpecialsPDF.html
@@ -541,7 +541,7 @@ sans,tahoma,sans-serif"></span></span></li>
 
 
 
-<span style="font-size:15px">Например, подписавшись на три месяца на електронную версию журнала "Вісник Вищого адміністративного суду України"   
+<span style="font-size:15px"><p align="justify">Например, подписавшись на три месяца на електронную версию журнала "Вісник Вищого адміністративного суду України"   
 
                                                           </span></span>
                                                           <span
@@ -606,7 +606,11 @@ style="color:#10813a"><b style="color:red">330,84&nbsp;грн.</b>
                                                           grande,lucida
                                                           sans
                                                           unicode,lucida
-sans,tahoma,sans-serif">Поспешите&nbsp;</span></span> <span
+sans,tahoma,sans-serif">
+
+
+<b style="color:red"> 
+Поспешите&nbsp;</span></span> <span
                                                           style="font-family:calibri,sans-serif;font-size:11.0pt;line-height:107%">–</span>
                                                           <span
                                                           style="font-size:15px"><span
@@ -620,7 +624,11 @@ style="font-size:18px"><span style="font-family:trebuchet ms,lucida
                                                           grande,lucida
                                                           sans
                                                           unicode,lucida
-sans,tahoma,sans-serif">30.09.2016 г. в 12:00</span></span></div>
+sans,tahoma,sans-serif">30.09.2016 г. в 12:00
+</b>
+
+
+</span></span></div>
                                                           </div>
                                                           </td>
                                                         </tr>
