--- a/SubscriptionSpecialsPDF.html
+++ b/SubscriptionSpecialsPDF.html
@@ -589,9 +589,9 @@ style="color:#10813a"><b style="color:red">330,84&nbsp;грн.</b>
 
 </span></span> ). Т.е. Вы секономите 165,42&nbsp;грн.! <br>
 <br>
-У нас много юридических журналов, а также газета "Юридичний вісник України". Вы сможете подписаться на любой из них на печатный или електронный вариант. Все на периодические издания Вы увидите на нашем сайте http://pressa.yurincom.com/ 
+У нас много юридических журналов, а также газета "Юридичний вісник України". Вы сможете подписаться на любой из них на печатный или електронный вариант. Все правовые периодические издания Вы увидите на нашем сайте <a href="http://pressa.yurincom.com">http://pressa.yurincom.com</a>
 Выбирайте на ваш вкус!<br>
-
+Не забудьте в поле "Додаткова інформація" написать: <b>Акция "Два за один"</b>
 
 <b
                                                           style="color:red"> </b></span></span><br>
