--- a/SubscriptionSpecialsPDF.html
+++ b/SubscriptionSpecialsPDF.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Fwd: Подписка на журнал с 50% скидкой 🎁 Осталось 2 дня!</title>
+    <title>Fwd: Подписка на журнал с 50% скидкой!</title>
   </head>
 
+  
 
 
 
@@ -266,7 +267,7 @@ style="font-size:15px"><span style="font-family:trebuchet ms,lucida
                                                           grande,lucida
                                                           sans
                                                           unicode,lucida
-sans,tahoma,sans-serif">Наступила осень и издательство </span></span><span
+sans,tahoma,sans-serif">Осень продолжается и издательство </span></span><span
 style="font-size:15px"><span style="font-family:trebuchet ms,lucida
                                                           grande,lucida
                                                           sans
