--- a/SubscriptionSpecialsPDF.html
+++ b/SubscriptionSpecialsPDF.html
@@ -75,7 +75,7 @@
                                                       <tbody>
                                                         <tr>
                                                           <td style="padding: 0pt 0px;" valign="top">
-                                                          <a href="http://pressa.yurincom.com"><img src="F:/xampp/htdocs/gh/htmlMailing/pic1.jpg" alt="" border="0" height="158" width="592"></a>
+                                                          <a href="http://pressa.yurincom.com"><img style="border: 0px solid ; width: 592px; height: 158px;" src="f:/xampp/htdocs/gh/htmlMailing/pic1.jpg" alt=""></a>
                                                           </td>
                                                         </tr>
                                                       </tbody>
