--- a/SubscriptionSpecialsPDF.html
+++ b/SubscriptionSpecialsPDF.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
+
   
     <meta http-equiv="content-type" content="text/html; charset=utf-8"><title>Fwd: Подписка на журнал с 50% скидкой!</title></head><body bgcolor="#ffffff" text="#000000">
     <div dir="ltr">
@@ -242,8 +243,8 @@
 Выбирайте на ваш вкус!<br>
 <br><span style="font-weight: bold; color: rgb(172, 64, 210);">
 Не забудьте в поле "Додаткова інформація" написать: </span><big><b style="font-weight: bold; color: rgb(172, 64, 210); font-style: italic;">"Акция "Два за один"</b><span style="font-weight: bold; color: rgb(172, 64, 210); font-style: italic;">!</span><b style="color: rgb(172, 64, 210); font-weight: bold; font-style: italic;">&nbsp; <small>(иначе
-действие акции будет недействительным. Хотя вы всегда можете написать
-или позвонить нам и сказать, что Вы хотите участвовать в этой акции)</small></b></big><br>
+действие акции будет недействительным. Хотя, если Вы забыли поставить эту надпись, Вы всегда можете написать
+или позвонить и сказать, что хотите участвовать в этой акции)</small></b></big><br>
 
 
 
